# timeloop

./: Cargo.toml  README.md  bacon.toml  flake.nix  shell.nix
.github/workflows/: rust.yml
ci/: lint.sh
examples/: basic.rs  recursive.rs  rep_test.rs  short_interval_removal.rs  thread_test.rs  throughput.rs
src/: lib.rs  macros.rs  repitition_tester.rs
timeloop_proc_macro/: Cargo.toml
timeloop_proc_macro/src/: lib.rs
