[package]
name = "timeloop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"

[features]
default = ["enable"]
enable = []
disable = []

[dev-dependencies]
libc = "0.2.148"
rand = "0.8.5"
